--- a/index.html
+++ b/index.html
@@ -10,34 +10,34 @@
 				<p>WebPortal</p>
 				<img src="images/thumbnail_IMG_1331.png" alt="what I look like">
 			</header>
-			<main>
+				<main>
+
+					<div id="container">
+						<section id="intro" class="intro">
+							<p class="introduction">Introduction</p>
+							<p class="p2">I am Shaiden Bernard and I made this website to store all of my website links. To access them click on the links below:)</p>
 
 
-				<section id="intro" class="intro">
-					<p class="introduction">Introduction</p>
-					<p class="p2">I am Shaiden Bernard and I made this website to store all of my website links. To access them click on the links below:)</p>
-					
+						</section>
 
-				</section>
+						<section class="about">
 
-				<section class="about">
+							<p class="introduction">About me</p>
+							<p class="p2">I am currently a junior at Norwood-Norfolk Central School. I am learning how to code at the momment and some of the code I am learning is HTML, CSS, and Javascript but I am hoping to learn more later. I am going to be at Suny Canton college when I graduate highschool.</p>
 
-					<p class="introduction">About me</p>
-					<p class="p2">I am currently a junior at Norwood-Norfolk Central School. I am learning how to code at the momment and some of the code I am learning is HTML, CSS, and Javascript but I am hoping to learn more later. I am going to be at Suny Canton college when I graduate highschool.</p>
-
-				</section>
-			</main>
-			<nav>
-				<section id="website" class="webProjects">
-					<a href="Christmas22/index.html" class="christmas">2022 Christmas</a>
-					<a href="Beagles/index.html" class="beagles">Beagles 2023</a>
-					<a href="fitness/index.html" class="forward">Forward Fitness</a>
-					<a href="Nintendo/Nintendo/index.html" class="nintendo">Nintendo</a>
-					<a href="Resume/index.html" class="resume">Resume</a>
-					<a href="RWD/Lab-2-1_-Creating-a-Webpage-for-Strike-a-Chord/index.html" class="RWD">RWD</a>
-				</section>
-			</nav>
-			
+						</section>
+					</div>
+				</main>
+					<nav>
+						<section id="website" class="webProjects">
+							<a href="Christmas22/index.html" class="christmas">2022 Christmas</a>
+							<a href="Beagles/index.html" class="beagles">Beagles 2023</a>
+							<a href="fitness/index.html" class="forward">Forward Fitness</a>
+							<a href="Nintendo/Nintendo/index.html" class="nintendo">Nintendo</a>
+							<a href="Resume/index.html" class="resume">Resume</a>
+							<a href="RWD/Lab-2-1_-Creating-a-Webpage-for-Strike-a-Chord/index.html" class="RWD">RWD</a>
+						</section>
+					</nav>
 			<footer>
 				<h5>This site is for educational purposes only!!</h5>
 				<h4>**FAIR USE**</h4>
