--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 							<a href="Nintendo/Nintendo/index.html" class="nintendo">Nintendo</a>
 							<a href="Resume/index.html" class="resume">Resume</a>
 							<a href="RWD/Lab-2-1_-Creating-a-Webpage-for-Strike-a-Chord/index.html" class="RWD">RWD</a>
-						</section>
+							<a href="Roblox/index.html" class="Roblox">Roblox</a>
+ 						</section>
 					</nav>
 			<footer>
 				<h5>This site is for educational purposes only!!</h5>
